--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,5 +6,5 @@
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/main.css" />
+  <link rel="stylesheet" type="text/css" href="/styles/main.css" />
 </head>
